<resources>
    <string name="app_name">Destinos</string>
    <string name="name">Nombre</string>
    <string name="date">Fecha</string>
    <string name="price">Precio</string>
    <string name="visitors">Visitantes</string>
    <string name="img">Imagen</string>
    <string name="sinopsis">Descripcion</string>
    <string name="gravity">Gravedad</string>
    <string name="save">Guardar</string>
    <string name="action_add">Agregar</string>
</resources>
