<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handler"
            type="unicauca.movil.planetas.AddActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="unicauca.movil.planetas.AddActivity"
        android:padding="@dimen/small">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />



        <EditText
            android:id="@+id/visitors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visitors"
            android:inputType="number" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="text" />
        <EditText
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/img"
            android:inputType="text" />

        <EditText
            android:id="@+id/sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sinopsis"
            android:inputType="text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{()-> handler.save()}"
            />

    </LinearLayout>
</layout>

